# QLibraryManagementSystem

./: .clang-format  .clang-tidy  .cmake-format.json  .gitignore  .gitmodules  CMakeLists.txt  README.md  book.cpp  book.h  bookadddialog.cpp  bookadddialog.h  bookadddialog.ui  bookauthor.cpp  bookauthor.h  bookcard.cpp  bookcard.h  bookcard.ui  bookcategory.cpp  bookcategory.h  booksection.cpp  booksection.h  booksection.ui  booksectiondao.cpp  booksectiondao.h  clickableframe.cpp  config.ini  dragdroplistview.cpp  dragdroplistview.h  fadebutton.cpp  fadebutton.h  imagepickerlabel.cpp  imagepickerlabel.h  libraryapplication.cpp  libraryapplication.h  librarydatabase.cpp  librarydatabase.h  librarymainwindow.cpp  librarymainwindow.h  librarymainwindow.ui  librarysidemenu.cpp  (+19 more)
LibraryManagementOrganization/: LibraryManagementSystem.ini
backend/: Dockerfile  docker-compose.yml  package.json  prettier.config.js
backend/common/: error.js  query.js  validation.js
backend/controllers/: author.js  authorbook.js  book.js  category.js  index.js  user.js
backend/routes/: route.js
kwidgets/: CMakeLists.txt  kratingpainter.cpp
resources/: resource.qrc
resources/icons/fluent-dark/: index.theme
sql/: qlibrarydb-data.sql  qlibrarydb-schema.sql
src/: CMakeLists.txt  aspectratiolabel.cpp  aspectratiolabel.h  authoradddialog.cpp  authoradddialog.h  authordetailsdialog.cpp  authordetailsdialog.h  authorsearchfilterdialog.cpp  authorsearchfilterdialog.h  authorsection.cpp  authorsection.h  bookadddialog.cpp  bookadddialog.h  bookcard.cpp  bookcard.h  bookcarddelegate.cpp  bookcarddelegate.h  bookcardmodel.cpp  bookcardmodel.h  bookdetails.cpp  bookdetails.h  bookdetailsdialog.cpp  bookdetailsdialog.h  bookrestmodel.cpp  bookrestmodel.h  booksearchfilterdialog.cpp  booksearchfilterdialog.h  booksection.cpp  booksection.h  booksectiondao.cpp  booksectiondao.h  categorysection.cpp  categorysection.h  clickableframe.cpp  clickableframe.h  dragdroplistview.cpp  dragdroplistview.h  elidedlabel.cpp  elidedlabel.h  errormessagepopup.cpp  (+40 more)
src/common/: CMakeLists.txt  algorithm.h  error.cpp  error.h  future.h  resourcemanager.h  widgetutils.cpp  widgetutils.h
src/controllers/: CMakeLists.txt  authorbookcontroller.cpp  authorbookcontroller.h  authorcontroller.cpp  authorcontroller.h  bookcategorycontroller.cpp  bookcategorycontroller.h  bookcontroller.cpp  bookcontroller.h  bookratingcontroller.cpp  bookratingcontroller.h  categorycontroller.cpp  categorycontroller.h  controller.cpp  controller.h
src/dao/: authordetailsdao.cpp  authordetailsdao.h  booksectiondao.cpp  booksectiondao.h
src/database/: author.cpp  author.h  authordetailsdao.cpp  authordetailsdao.h  book.cpp  book.h  bookauthor.cpp  bookauthor.h  bookcategory.cpp  bookcategory.h  bookdetailsdao.cpp  bookdetailsdao.h  booksectiondao.cpp  booksectiondao.h  category.cpp  category.h  invoker.h  librarydatabase.cpp  librarydatabase.h  schema.h
src/delegate/: CMakeLists.txt  authoricondelegate.cpp  authoricondelegate.h  bookcarddelegate.cpp  leftaligndelegate.cpp  leftaligndelegate.h  tableratingdelegate.cpp  tableratingdelegate.h
src/forms/: authoradddialog.ui  authordetailsdialog.ui  authorsearchfilterdialog.ui  authorsection.ui  bookadddialog.ui  bookcard.ui  bookdetails.ui  bookdetailsdialog.ui  booksearchfilterdialog.ui  booksection.ui  categorysection.ui  librarymainwindow.ui  librarysidemenu.ui  loginform.ui  pagination.ui  searchfilterdialog.ui  twowaylist.ui
src/model/: CMakeLists.txt  abstractrestmodel.cpp  abstractrestmodel.h  authorlistmodel.cpp  authorlistmodel.h  authorrestmodel.cpp  authorrestmodel.h  bookrestmodel.cpp  bookrestmodel.h  bookresttableproxymodel.cpp  bookresttableproxymodel.h  loadingmodel.cpp  loadingmodel.h  modelhelper.h
src/network/: CMakeLists.txt  httpmultipart.cpp  httpmultipart.h  imageloader.cpp  imageloader.h  network.cpp  network.h  networkerror.h  userauthentication.cpp  userauthentication.h
src/schema/: CMakeLists.txt  author.h  book.h  bookauthor.h  bookcategory.h  category.h  schema.cpp  schema.h
src/view/: CMakeLists.txt  gridview.cpp  headerlistview.cpp  headerlistview.h
